* Fixed a lot of issues related to detecting removed ISOs and auto-eject them from servers. More testing is needed, but it should be working a lot better now. * Fixed a bug in 'ScanCore->insert_or_update_servers()' where it was failing on DB updates. Also fixed '_server_eject_media' to handle being called locally. * Fixed 'Striker->_update_server_definition()' to set 'definition_file' if it wasn't set in the hash.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -976,6 +976,10 @@ The 'AN::Tools::ScanCore' module's 'insert_or_update_servers()' method was calle
 
 The 'AN::Tools::ScanCore' module's 'insert_or_update_servers()' method was called with 'just_definition', but no server UUID or name was passed in.
 
+=head2 C<185>
+
+The 'AN::Tools::Striker' module's '_server_eject_media()' method was called without a server name being set.
+
 
 =head2 C<999>
 
