* Added the ability to selectively disable ScanCore agents (issue #95). * Added the new locking system (but not yet tested). ** Created the new DB->locking() and ->mark_active() methods. ** Created the new ScanCore->insert_or_update_states() for use storing DB access state info.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -980,6 +980,14 @@ The 'AN::Tools::ScanCore' module's 'insert_or_update_servers()' method was calle
 
 The 'AN::Tools::Striker' module's '_server_eject_media()' method was called without a server name being set.
 
+=head2 C<186>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_states()' method was called without state name being set.
+
+=head2 C<187>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_states()' method was called without state host uuid being set.
+
 
 =head2 C<999>
 
