* Got auto-archiving working for the 'agents' and 'temperature' tables in ScanCore (they will be a template for everything else). * Created 'System->compress_file()' to compress the given file using 'bzip2', which uses '--fast' when run on a node to reduce memory used in the compression process. * Silenced some logging.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -962,6 +962,14 @@ The 'AN::Tools::ScanCore' module's 'insert_or_update_states()' method was called
 
 The 'AN::Tools::ScanCore' module's 'insert_or_update_states()' method was called without state host uuid being set.
 
+=head2 C<188>
+
+The 'AN::Tools::System' module's 'compress_file()' method was called without a file name to compress.
+
+=head2 C<189>
+
+The 'AN::Tools::System' module's 'compress_file()' method was called with a file name that does not appear to be a fully defined path.
+
 
 =head2 C<999>
 
