* Updated 'Alert->error()' to print the footer when called from a browser so that the waiting pinwheel goes away, if it was displayed. * Updated 'Get->pids()' to ignore PIDs of programs run by 'timeout'. * Updated 'Striker->_cold_stop_anvil()' to no longer call 'anvil-kick-apc-ups' and instead just call 'anvil-safe-stop' directly via 'timeout' with a 120 second window. If timeout pops, it will error out. * Updated 'anvil-safe-stop' to call 'anvil-kick-apc-ups --cancel' right before a local power off.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -970,6 +970,10 @@ The 'AN::Tools::System' module's 'compress_file()' method was called without a f
 
 The 'AN::Tools::System' module's 'compress_file()' method was called with a file name that does not appear to be a fully defined path.
 
+=head2 C<190>
+
+A request to shut down a node timed out.
+
 
 =head2 C<999>
 
