* Fixed problems with checking RAM use caused by the move of the ScanCore function to ScanCore.pm module. Also made it optional to check and exit on using too much RAM. * Fixed a bug when updating scan-storcli and scan-ipmitool related to missing a malformed DB column types.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -974,6 +974,14 @@ The 'AN::Tools::System' module's 'compress_file()' method was called with a file
 
 A request to shut down a node timed out.
 
+=head2 C<191>
+
+The 'AN::Tools::Get' module's 'ram_used_by_program()' method was called without a program name to check.
+
+=head2 C<192>
+
+The 'AN::Tools::ScanCore' module's 'check_ram_usage()' method was called without a program name to check.
+
 
 =head2 C<999>
 
