* Added a check that throws an error if the striker.conf points to the same database target more than once. * Fixed a bug in 'AN::Remote->remote_call()' where the same ssh filehandle is cached when two nodes have the same IP but different ports (as is the case in most remote connections via port forwards).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -982,6 +982,10 @@ The 'AN::Tools::Get' module's 'ram_used_by_program()' method was called without 
 
 The 'AN::Tools::ScanCore' module's 'check_ram_usage()' method was called without a program name to check.
 
+=head2 C<193>
+
+The 'AN::Tools::DB' module's 'connect_to_databases()' method tried to connect to the same database twice.
+
 
 =head2 C<999>
 
