* Starting work on a new tool for changing passwords on Striker dashboards and Anvil! systems called tools/striker-change-password. The sanity checking is done already, but none of the actual logic. * Started work on a new System->configure_ipmi() method to be a more general purpose version of InstallManifest->configure_ipmi_on_node(). * Started work on a new System->get_daemon_state() method to be a more general purpose version of InstallManifest->get_daemon_state(). ** Both of these modules will NOT be used by any existing code until after v2.0, but they will be used by the new password tool.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -986,6 +986,10 @@ The 'AN::Tools::ScanCore' module's 'check_ram_usage()' method was called without
 
 The 'AN::Tools::DB' module's 'connect_to_databases()' method tried to connect to the same database twice.
 
+=head2 C<194>
+
+The 'AN::Tools::System' module's 'configure_ipmi()' was called without a password being set.
+
 
 =head2 C<999>
 
