* Made a fair bit of progress on tools/striker-change-password, but it is not complete yet. * Added 'sys::local_db_id' which is set to the local machine's DB ID (scancore::db::X::...) when successfully connected to the local database in DB->connect_to_databases(). * Fixed a bug in Get->ip_from_hostname() where using 'gethostip' was successful but the returned IP wasn't recorded. * Created ScanCore->get_striker_peers() which returns a list of Striker peers based on scancore::db::X:... (minus our ID). * Created Striker->build_local_host_list() which returns an array of possible names and IPs that other machines might known the local machine as (hostnames and IPs) * Created Striker->get_db_id_from_striker_conf() which searches striker.conf on local or remote systems and returns the DB ID (scancore::db::X::...) for a given array of possible names/IPs. * Created Striker->update_striker_conf() which updates a given 'variable = value' pair on local or remote systems. * Created System->change_apache_password() which updates the password for apache's htpasswd file. * Created System->change_postgresql_password() which updates the pgsql password for a given user. * Created System->change_shell_user_password() which updates the password for a system user. * Created System->get_local_ip_addresses() which returns a hash reference of network devices and their IPs.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -990,6 +990,54 @@ The 'AN::Tools::DB' module's 'connect_to_databases()' method tried to connect to
 
 The 'AN::Tools::System' module's 'configure_ipmi()' was called without a password being set.
 
+=head2 C<195>
+
+The 'AN::Tools::System' module's 'change_shell_user_password()' was called without a user name to change the password for.
+
+=head2 C<196>
+
+The 'AN::Tools::System' module's 'change_shell_user_password()' was called without a new password being set.
+
+=head2 C<197>
+
+The 'AN::Tools::System' module's 'change_shell_user_password()' was called without root privileges.
+
+=head2 C<198>
+
+The 'AN::Tools::System' module's 'change_apache_password()' was called without a new password being set.
+
+=head2 C<199>
+
+The 'AN::Tools::System' module's 'change_apache_password()' was called without root privileges.
+
+=head2 C<200>
+
+The 'AN::Tools::System' module's 'change_apache_password()' without a user being defined and the htpasswd users file doesn't exist, so no user names could be divined.
+
+=head2 C<201>
+
+The 'AN::Tools::System' module's 'change_postgresql_password()' was called without a user name to change the password for.
+
+=head2 C<202>
+
+The 'AN::Tools::System' module's 'change_postgresql_password()' was called without a new password being set.
+
+=head2 C<203>
+
+The 'AN::Tools::System' module's 'change_postgresql_password()' was called without root privileges.
+
+=head2 C<204>
+
+The 'AN::Tools::Striker' module's 'update_striker_conf()' was called without a vairable to work on.
+
+=head2 C<205>
+
+The 'AN::Tools::Striker' module's 'get_db_id_from_striker_conf()' was called without an array reference of host(s) to match.
+
+=head2 C<206>
+
+The 'AN::Tools::Striker' module's 'get_db_id_from_striker_conf()' was called with an empty array reference of host(s) to match.
+
 
 =head2 C<999>
 
