* This adds the new 'ScanCore->get_node_health()' which returns the numerical health score for the target node. * This adds the new 'System->pick_shutdown_target()' which uses much the same logic that tools/anvil-safe-stop's 'load_shed' function used, but is generalized so that it can be called from striker dashboards or tools on the nodes. * Updated 'Get->server_data()' to set the migration type to the default when no specific policy is found for a server. * Starting work on the new Cold Stop logic, using the pick_shutdown_target() method. * Fixed a display bug where a user was told that a cold-migration was about to be performed in the migration confirmation, despite the fact that live migration was going to be used. * Fixed a bug where provisioning a server with less that 1 GiB of disk space failed because the requested size was rounded to '0'. Now specific MiB units are used, as they should have been. * Added server type entries for Win10 and Win2016 servers when provisioning servers (properly, this time).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -1146,6 +1146,14 @@ The 'AN::Tools::System' module's 'configure_ipmi()' was called with an invalid t
 
 The 'AN::Tools::System' module's 'configure_ipmi()' was asked to change the IPMI user password, but was not given the name of the user to work on.
 
+=head2 C<234>
+
+The 'AN::Tools::System' module's 'pick_shutdown_target()' was called without an Anvil! UUID.
+
+=head2 C<235>
+
+The 'AN::Tools::ScanCore' module's 'get_node_health()' method was passes in a target which could not be translated to a host UUID.
+
 
 =head2 C<999>
 
