* Created the new 'DB->archive_table()' method that replaces all of the ScanCore 'archive_foo()' functions. This implements a new mechanism to "chunk" up large archive jobs into smaller, bite-sized chunks. This will solve two problems; It will allow the lock age to be updated more reliably during very large archive jobs and it will prevent running into RAM issues during the same. This new method also handles compression as it goes, rather than a single (possibly long and slow) series of compression calls. * Updated 'System->compress_file()' to check if the target file exists and after a compression, that the compressed file exists. It now also returns the compressed file path/name (ir successful) plus the command output.
Signed-off-by: digimer <digimer@pulsar.alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -1154,6 +1154,18 @@ The 'AN::Tools::System' module's 'pick_shutdown_target()' was called without an 
 
 The 'AN::Tools::ScanCore' module's 'get_node_health()' method was passes in a target which could not be translated to a host UUID.
 
+=head2 C<236>
+
+The 'AN::Tools::DB' module's 'archive_table()' method was called without a table name given.
+
+=head2 C<237>
+
+The 'AN::Tools::DB' module's 'archive_table()' method was called without a number of records to archive.
+
+=head2 C<237>
+
+The 'AN::Tools::DB' module's 'archive_table()' method was called without an array reference of columns.
+
 
 =head2 C<999>
 
