--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -1166,6 +1166,10 @@ The 'AN::Tools::DB' module's 'archive_table()' method was called without a numbe
 
 The 'AN::Tools::DB' module's 'archive_table()' method was called without an array reference of columns.
 
+=head2 C<239>
+
+Failed to open a socket.
+
 
 
 =head2 C<999>
