* Realized I didn't have update_db() functions in the new scan-ping-target, scan-remote-access and scan-server-resources agents. They will be added in the next commit. * Got more work done on the scan-apc-pdu agent. * Created the 'Get->node_pdus()' method and added sanity checks to 'Get->node_upses()'. * Quieted logging in tools/anvil-cli-state and tools/anvil-report-state.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -1168,7 +1168,19 @@ The 'AN::Tools::DB' module's 'archive_table()' method was called without an arra
 
 =head2 C<239>
 
+The 'AN::Tools::Get' module's 'node_pdus()' method was called without an Anvil! UUID being passed.
 
+=head2 C<240>
+
+The 'AN::Tools::Get' module's 'node_pdus()' method was called without an node name being passed.
+
+=head2 C<241>
+
+The 'AN::Tools::Get' module's 'node_upses()' method was called without an Anvil! UUID being passed.
+
+=head2 C<242>
+
+The 'AN::Tools::Get' module's 'node_upses()' method was called without an node name being passed.
 
 
 
