* Added a ping to a ScanCore database server before trying to connect to reduce slow-down caused by the loss of a ScanCore database host. This ping check can be disabled with the new 'scancore::db::<id>::ping_before_connect' on a per-DB basis. * Added zero-padding to CPU cores so that the list of cores in the select box sorts properly when editing a server's configuration in Striker. This closes issue #123. * Created the new ScanCore->insert_or_update_health() method that makes it cleaner to set/clear health scores. * Updated scan-bond to set a value of '1' for each failed link. This clears when the interface returns to a 'going back' or 'up' state. * Updated scan-clustat to use warning level alerts for changes in node membership. * Fixed a minor bug in anvil-cli-state where the warning about high load would be displayed on single-shot runs. * Fixed the RC version in anvil-generate-iso.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -310,11 +310,11 @@ The 'AN::Tools::Storage->rsync() method was called without a 'source' parameter.
 
 =head2 C<25>
 
-A directory was passed to a method that does not exist yet. Please create the directory mentioned in the error.
+The 'AN::Tools::ScanCore' module's 'insert_or_update_health()' method was called without a health agent name being passed.
 
 =head2 C<26>
 
-A directory was passed to a method that exists but is not writeable by either the user or group that the method was running as. Please change the permissions on the directory to be writeable by the user or group specified in the error or specify a different directory that is writeable.
+The 'AN::Tools::ScanCore' module's 'insert_or_update_health()' method was called without a health source name being passed.
 
 =head2 C<27>
 
